<resources>

    <string name="app_name">Graph</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="pieText">Pie Graphic</string>
    <string name="lineText">Line Graph</string>
    <string name="create_chart">Click to view chart</string>
    <string name="name">Name</string>
    <string name="data">Data</string>

</resources>