<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" >
<RadioGroup         
    	android:id="@+id/typeChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
     <RadioButton
        android:id="@+id/lineRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/lineText" />

    <RadioButton
        android:id="@+id/pieRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pieText" />
</RadioGroup>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:ems="10"
            android:hint="name1, name2, name3, name4" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dataEdit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:ems="10"
            android:hint="12, 23, 34, 45"
            android:inputType="number" />

    </LinearLayout>
   <Button
        android:id="@+id/LineGraph"
        android:layout_width="fill_parent"
        android:onClick="actionClicked"
        android:layout_height="wrap_content"
        android:text="@string/create_chart"/>
</LinearLayout>
